========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-10-08

  - Fixed a bug in the full booking matching code whereby an existing position
    not held at cost would trip up the matching code. (Credits to Son Nguyen for
    finding and reporting.)

  - During ingest, when multiple extractors match a particular file, select the
    first matching account instead of raising an error.

  - Fixed accidentally colliding key-binding for invoking bean-price from Emacs,
    to C-c p.


2016-09-25

  - Fixed typo in grammar that was parsing a transaction flag as '#' into '*'.

  - Added "cost_date" and "cost_label" columns in the SQL shell.


2016-09-04

  - Implemented new "run" shell command that allows you to run a named query.
    For example, if an input file has a Query directive like this:

      2016-09-01 query "home" "select account, sum(position) where account ~ 'Home' group by 1"

    And you input this command:

      run home

    The entries will be closed at tue query date (2016-09-01) and the query
    automatically run. If you want to always include all the transactions, set a
    date far into the future.

    This works from the command-line and from the shell, equally. You can also
    run all the queries in an input file, like this:

      run *

    To view the list of available queries, just type the "run" command without
    an argument.


2016-08-21

  - Fixed a SQL shell bug with extracting UNITS() from a Position column.

  - Finally properly fixed the timezone of the Google Finance price fetcher.
    (It was done incorrectly and I found my unit tests failing whenever I would
    work on Beancount from another timezone.)


2016-08-17

  - Added beancount.core.amount.abs() function for absolute values of Amount.

  - Added rendering of links to beancount.plugins.split_expenses plugin, and